# ChangeLog for sci-electronics/kicad
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-electronics/kicad/ChangeLog,v 1.37 2009/04/18 18:30:17 calchan Exp $

  18 Apr 2009; Denis Dupeyron <calchan@gentoo.org>
  -files/kicad-20070702-wxGTK-2.6.patch, -kicad-20070525.ebuild,
  -kicad-20070702.ebuild, -kicad-20080320.918.ebuild,
  -kicad-20080914.1262.ebuild:
  Cleaned-up old ebuilds, kept the latest one for stabilization.

*kicad-20090320.1666 (17 Apr 2009)

  17 Apr 2009; Denis Dupeyron <calchan@gentoo.org>
  +kicad-20090320.1666.ebuild:
  Version bump.

  22 Sep 2008; Denis Dupeyron <calchan@gentoo.org>
  kicad-20080914.1262.ebuild:
  Fixed cmake dependency, thanks to Paul de Vries (bug #238175).

*kicad-20080914.1262 (18 Sep 2008)

  18 Sep 2008; Denis Dupeyron <calchan@gentoo.org>
  +kicad-20080914.1262.ebuild:
  Version bump.

  30 Mar 2008; Denis Dupeyron <calchan@gentoo.org>
  kicad-20080320.918.ebuild:
  Fixed postinst messages, thanks to Igor Plyatov.

*kicad-20080320.918 (23 Mar 2008)

  23 Mar 2008; Denis Dupeyron <calchan@gentoo.org>
  +kicad-20080320.918.ebuild:
  Version bump, many thanks to Igor Plyatov (bug #214096).

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> kicad-20070115.ebuild,
  kicad-20070525.ebuild, kicad-20070702.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

  09 Feb 2008; Denis Dupeyron <calchan@gentoo.org> kicad-20070115.ebuild,
  kicad-20070525.ebuild, kicad-20070702.ebuild:
  Fixed multilib handling, bug #205454.

  12 Dec 2007; Mart Raudsepp <leio@gentoo.org> kicad-20070115.ebuild,
  kicad-20070525.ebuild, kicad-20070702.ebuild:
  Modernize the need-wxwidgets handling and fix the non-unicode case for bug
  202007

  12 Dec 2007; Denis Dupeyron <calchan@gentoo.org> kicad-20070115.ebuild,
  kicad-20070525.ebuild, kicad-20070702.ebuild:
  Fixed bug #202007, thanks to Denilson. Fixed unquoted variables.
