@@ -5,6 +5,6 @@ DIST kicad-examples-20090320-r1666.tar.lzma 508966 RMD160 3346f0ff9992d22a0641b6
 DIST kicad-library-20090320-r1666.tar.lzma 8597781 RMD160 3f66f5abe2a5ce9988cd480c78cc51899a6ea730 SHA1 f05a95bc2be040baad3e24d4154a82f2e1322074 SHA256 6594415c274d21a2a9953c3cb8ce491c9c12eaadd5ce958a429b61de19c6b21a
 DIST kicad-sources-20090320-r1666.tar.lzma 2654855 RMD160 fb72894f36f022e28efc2ee9eaf02a35ab43b392 SHA1 5e603fd46d0080dfc0ee2d9a1b603367ab45fda0 SHA256 9e59c08d93051f57ec10defd7a6c0afa0feeee9d9a47e2aba82ead9dbeca5ad2
 EBUILD kicad-20070115.ebuild 3528 RMD160 65fc58163cbf1b8e023d408099187ab37b115972 SHA1 da88cbe2656208fa14dae2eec7735b7badf57792 SHA256 95caddf1a0122181afe2375da8444433130299a6c4de007ff223a8c48d83622c
-EBUILD kicad-20090320.1666.ebuild 2334 RMD160 efedb04a49c6e893f2a0983812762871af8ecc81 SHA1 54dec2922eab8279adcd50c1c124408478462291 SHA256 25b5bbfd27a7ed4d9aae4d6efda08aab31a06b19ad2da493a7386ae70f0158bc
-MISC ChangeLog 5816 RMD160 6e95a5d2da2dc921a2cb10780d08e92737803280 SHA1 576e8e1ead26cab4f5ebf200388b10f8bc5ea6c7 SHA256 3de66463f2ad24cf1f950a21ea68c947b3c8f4a6a74070e15895d1173fa423e4
+EBUILD kicad-20090320.1666.ebuild 2305 RMD160 077b989c26e3e342a434874e81aa48402e01c5d6 SHA1 8630f26d414381fa4c012eb582a0d42b570feaf4 SHA256 22e74e1079c6c07bfa98d24f6ba14062abb24503e314150fa94bfa51f92d8cea
+MISC ChangeLog 5910 RMD160 8ef7dd53f1c2b25bb7758eb3798cd1a6eaa922ff SHA1 8e5811f3497531e933d5669c859dd84183c59d50 SHA256 6eb349c3637f6503812cd50de9fdcd0faa1b54d8446e152cf2bafd0a6a347db3
 MISC metadata.xml 339 RMD160 edfadf44bb7c0a6049e40379258ccfbe89b74b5f SHA1 387abeb29f7e875057901f84b2bdb77c4f942c2e SHA256 311ce02a24351429c5d83af4292d0b8fa315ffde140ba06ac64e6bf3c233d173
