@@ -1,6 +1,9 @@
 # ChangeLog for sci-electronics/kicad
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-electronics/kicad/ChangeLog,v 1.37 2009/04/18 18:30:17 calchan Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-electronics/kicad/ChangeLog,v 1.38 2009/04/21 21:53:16 calchan Exp $
+
+  21 Apr 2009; Denis Dupeyron <calchan@gentoo.org> kicad-20090320.1666:
+  Fixed bug #266978.
 
   18 Apr 2009; Denis Dupeyron <calchan@gentoo.org>
   -files/kicad-20070702-wxGTK-2.6.patch, -kicad-20070525.ebuild,
